clusters/vollminlab-cluster/apps/sabnzbd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/rewrite-target":"/","nginx.ingress.kubernetes.io/ssl-redirect":"true"},"name":"sabnzbd-ingress","namespace":"mediastack"},"spec":{"ingressClassName":"nginx","rules":[{"host":"sabnzbd.vollminlab.com","http":{"paths":[{"backend":{"service":{"name":"sabnzbd","port":{"number":10097}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["sabnzbd.vollminlab.com"],"secretName":"wildcard- [...]
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  creationTimestamp: "2025-01-21T00:55:04Z"
  generation: 4
  name: sabnzbd-ingress
  namespace: mediastack
  resourceVersion: "3340054"
  uid: 685b702a-6244-4c40-b7c6-5f8bfb7c011f
spec:
  ingressClassName: nginx
  rules:
  - host: sabnzbd.vollminlab.com
    http:
      paths:
      - backend:
          service:
            name: sabnzbd
            port:
              number: 10097
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - sabnzbd.vollminlab.com
    secretName: wildcard-tls
status:
  loadBalancer:
    ingress:
    - ip: 192.168.152.244
